# schedule-generator

./: .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  analytics.py  config.py  solve.py  vacations.py
backend/app/config/: _init_.py  mapping.yaml  rules_config.yaml
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: _init_.py  base.py  tables.py
backend/app/schemas/: common.py
backend/app/services/: __init__.py  seed.py
backend/app/solver/: __init__.py  engine.py  exporter.py
backend/app/templates/: 2026_WORKBOOK_TEMPLATE.xlsx
backend/prd/: Scheduler_PRD.docx
backend/tests/: conftest.py  test_exporter.py  test_solver.py
frontend/: Dockerfile  README.md  package.json  server.mjs
frontend/public/: index.html
frontend/src/: main.js
frontend/src/components/: fairnessDashboard.js  scheduleBoard.js  vaacationForm.js
frontend/src/utils/: date.js  store.js
frontend/tests/: farinessDashboard.test.mjs  run-tests.mjs  scheduleBoard.test.mjs  vacationForm.test.mjs
