[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cardio-scheduler"
version = "0.1.0"
description = "CVA USA / The Heart House scheduling platform"
authors = [{name = "CVA USA"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "orjson>=3.10",
  "python-dateutil>=2.9",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "asgi-lifespan>=2.1"
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
asyncio_mode = "auto"